[Akshay] Refactor . department spacing issue is solved

--- a/Css/home.css
+++ b/Css/home.css
@@ -166,10 +166,11 @@ td img {
   background-color: #e9fea5;
   border-radius: 40%;
   width: fit-content;
-  padding: 1pz 7px;
+  padding: 1px 7px;
   text-align: center;
   font-size: 14px;
   display: inline-block;
   font-weight: 300;
   margin-bottom: 8px;
+  margin-right: 2px;
 }
